[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme/DefaultGodotTheme/GodotTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/editor/Popups/UpdateAvailablePopupDialog.gd" type="Script" id=2]
[ext_resource path="res://src/utils/AnimatedPopupAnim/AnimatedPopupAnim.tscn" type="PackedScene" id=3]

[node name="UpdateAvailablePopupDialog" type="WindowDialog"]
margin_right = 448.0
margin_bottom = 448.0
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "Update Checker"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 432.0
margin_bottom = 440.0
custom_constants/separation = 8

[node name="Intro" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 416.0
margin_bottom = 22.0
text = "An update to the latest version of %s (%s) is available."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 416.0
margin_bottom = 52.0
text = "Release Notes:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReleaseNoteBox" type="ReferenceRect" parent="MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 416.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3
border_color = Color( 0, 0, 0, 0.337255 )
editor_only = false

[node name="ReleaseScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ReleaseNoteBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ReleaseNoteBox/ReleaseScrollContainer"]
margin_right = 400.0
margin_bottom = 249.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Desc" type="Label" parent="MarginContainer/VBoxContainer/ReleaseNoteBox/ReleaseScrollContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.74902 )
margin_right = 400.0
margin_bottom = 22.0
text = "Full description goes here"
autowrap = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ReleaseNoteBox/ReleaseScrollContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 400.0
margin_bottom = 30.0

[node name="FullInfoHelp" type="Label" parent="MarginContainer/VBoxContainer/ReleaseNoteBox/ReleaseScrollContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.74902 )
margin_top = 34.0
margin_right = 400.0
margin_bottom = 73.0
text = "For all published changelog, please go to Help > Release Notes"
autowrap = true

[node name="EmptyBox" type="ReferenceRect" parent="MarginContainer/VBoxContainer/ReleaseNoteBox/ReleaseScrollContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 400.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 8 )

[node name="Author" type="Label" parent="MarginContainer/VBoxContainer/ReleaseNoteBox/ReleaseScrollContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.74902 )
margin_top = 89.0
margin_right = 400.0
margin_bottom = 111.0
text = "%s released this on %s"
autowrap = true

[node name="FileSize" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 333.0
margin_right = 416.0
margin_bottom = 355.0
text = "Total file size: %s"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WantTo" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 363.0
margin_right = 416.0
margin_bottom = 402.0
text = "Click YES to download (the program won't be closed)
Click NO if you want to download this later"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 416.0
margin_bottom = 432.0
custom_constants/separation = 8

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/VBoxContainer/ButtonHBox"]
margin_right = 304.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="DownloadButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonHBox"]
margin_left = 312.0
margin_right = 360.0
margin_bottom = 22.0
rect_min_size = Vector2( 48, 0 )
text = "Yes"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonHBox"]
margin_left = 368.0
margin_right = 416.0
margin_bottom = 22.0
rect_min_size = Vector2( 48, 0 )
text = "No"

[node name="AnimatedPopupAnim" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonHBox/DownloadButton" to="." method="_on_DownloadButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonHBox/CancelButton" to="." method="_on_CancelButton_pressed"]
